# Django-test

./: db.sqlite3
django-polls/: README.rst  pyproject.toml  setup.cfg
mysite/: settings.py  urls.py
polls/: admin.py  models.py  tests.py  views.py
polls/migrations/: 0001_initial.py
polls/static/polls/: style.css
polls/templates/admin/: base_site.html
polls/templates/polls/: detail.html  index.html  results.html
