[metadata]
name = django-polls
version = 0.1
description = A Django app to conduct web based polls.
long_description = file: README.rst
url = https://www.example.com/
author = Your name
author_email = yourname@example.com
license = BSD-3-Clause # Example license
classifers =
    Enviroment :: Web Enviroment
    Framework :: Django
    Framework :: Dajango :: X.Y # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: www/HTTP
    Topic :: Internet :: www/HTTP :: Dynamic Content

[options]
include_package_data = true
package = find:
Python_require = >=3.8
install_require = Django >= X.Y # Replace "X.Y" as appropriate

